# Data_Frame

./: .gitignore  CMakeLists.txt  README.md  fix_h.py  fix_sort.py  main.cpp
include/DataFrameLib/: Eager.hpp  Expr.hpp  Lazy.hpp  Optimizer.hpp
include/dataframelib/: dataframelib.h
results/: report.json
results/test_outputs/test_lazy/: lazy_explain.txt
src/: Eager.cpp  EagerDataFrame.h  Expr.cpp  ExpressionSystem.cpp  ExpressionSystem.h  IOUtils.cpp  Lazy.cpp  LazyDataFrame.h  Optimizer.cpp  correctness_check.cpp  main.cpp
src/EagerDataFrame_impl/: group-by-aggregate.cpp  head-select.cpp  read-write.cpp  table_view.cpp  with-column-join.cpp  with-column-sort.cpp
src/LazyDataFrame_impl/: GraphNodes.h  GraphVizUtils.cpp  LazyDataFrame.cpp  PlanNodes.cpp  QueryOptimizer.h  QueryOptimizerCost.cpp  QueryOptimizerExpression.cpp  QueryOptimizerFacade.cpp  QueryOptimizerPredicate.cpp  QueryOptimizerProjection.cpp  QueryOptimizerSchema.cpp  QueryOptimizerStructural.cpp  QueryOptimizerSupport.h
